--- a/src/OTS/CoreBundle/Resources/config/routing.yml
+++ b/src/OTS/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
 core_homepage:
     path:     /
-    defaults: { _controller: OTSCoreBundle:Default:index }
+    defaults: 
+        - _controller: OTSCoreBundle:Core:index
