Header and footer skeleton done

--- a/src/OTS/CoreBundle/Resources/config/routing.yml
+++ b/src/OTS/CoreBundle/Resources/config/routing.yml
@@ -1,4 +1,4 @@
-core_homepage:
+ots_core_home:
     path:     /
     defaults: 
-        - _controller: OTSCoreBundle:Core:index
+        _controller: OTSCoreBundle:Core:index
