--- a/src/OTS/BillingBundle/Resources/config/routing.yml
+++ b/src/OTS/BillingBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
 ots_billing_home:
     path:     /
-    defaults: { _controller: OTSBillingBundle:Default:index }
+    defaults: 
+        _controller: OTSBillingBundle:Billing:index
