--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
         "twbs/bootstrap": "^3.3",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "stripe/stripe-php": "4.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
