Fixed a couple of bugs with checkout

--- a/src/OTS/BillingBundle/Resources/config/routing.yml
+++ b/src/OTS/BillingBundle/Resources/config/routing.yml
@@ -2,3 +2,8 @@ ots_billing_home:
     path:     /
     defaults: 
         _controller: OTSBillingBundle:Billing:index
+
+ots_billing_thanks:
+    path:     /
+    defaults: 
+        _controller: OTSBillingBundle:Billing:index
