Added a confirmation page after checkout

--- a/src/OTS/BillingBundle/Resources/config/routing.yml
+++ b/src/OTS/BillingBundle/Resources/config/routing.yml
@@ -4,6 +4,6 @@ ots_billing_home:
         _controller: OTSBillingBundle:Billing:index
 
 ots_billing_thanks:
-    path:     /
+    path:     /confirmation
     defaults: 
-        _controller: OTSBillingBundle:Billing:index
+        _controller: OTSBillingBundle:Billing:confirmation
