--- a/composer.json
+++ b/composer.json
@@ -28,18 +28,19 @@
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "ircmaxell/random-lib": "^1.2",
         "leafo/scssphp": "~0.6",
         "patchwork/jsqueeze": "~1.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "stripe/stripe-php": "4.*",
         "symfony/assetic-bundle": "^2.7.1",
         "symfony/monolog-bundle": "^3.0.2",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
         "twbs/bootstrap": "^3.3",
-        "twig/twig": "^1.0||^2.0",
-        "stripe/stripe-php": "4.*"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
