Confirmation email now available in both english and french

--- a/src/OTS/BillingBundle/Resources/config/services.yml
+++ b/src/OTS/BillingBundle/Resources/config/services.yml
@@ -10,6 +10,7 @@ services:
         arguments:
             - "@mailer"
             - "@twig"
+            - "@service_container"
 
     ots_billing.mailer.checkout_stock_manager:
         class: OTS\BillingBundle\Mailer\CheckoutStockManager
