Installed a bundle to be able to translate text in js files

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,3 +9,6 @@ ots_billing:
     prefix:   /{_locale}/booking
     requirements:
         _locale: en|fr
+
+_bazinga_jstranslation:
+    resource: "@BazingaJsTranslationBundle/Resources/config/routing/routing.yml"
