--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "willdurand/js-translation-bundle": "^2.6"
     },
     "require-dev": {
+        "phpunit/phpunit": "^5.7",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
